[package]
name = "testing"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep_crate = {path = "dep_crate"}
proc_crate = {path = "proc_crate"}

[[bin]]
name = "main"
path = "src/main.rs"