[package]
name = "caller_modpath_macros"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
description = "Get the module path of the caller in a proc_macro"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Shizcow/caller_modpath"
keywords = ["module_path", "modpath"]
categories = ["development-tools"]

[dependencies]
syn = {version = "1.0.23", features = ["full"]}
quote = "1.0.6"

[lib]
proc-macro = true